# website

./: .eslintrc.json  .gitignore  .jshintignore  .jshintrc  .pylintrc  .travis.yml  Cargo.toml  Makefile  Procfile  README.md  angular.json  app.yaml  astro.config.mjs  cloudbuild.yml  config.py  environment.yml  eslint.config.js  launch_services.py  package-lock.json  package.json  personal-website-318015-2ec849c2abf8.json.enc  personal-website-318015-bf6cbd444844.json.enc  pyproject.toml  requirements.txt  run_stylechecks.py  travis.yml
app/: __init__.py  constants.py  models.py  routes.py
app/static/: changelog.md  exercise1.js  exercise2.js  exercise3.js  robots.txt  sitemap.xml  styles.css
app/templates/: 404.html  about.html  activity.html  advent_of_code.html  base.html  blog.html  blogPost.html  blog_post.html  frontPage.html  main.html  new_main.html  projectEuler.html  publications.html
bots/: hello_bot.py  secrets.py
build-scripts/: process-markdown.js
chess_scraper/: chess_com.py
content/blog/: samplesFromASphere.md  (+2 more)
crypto/: balance.py  client.py  constants.py  market_values.py
database/: tweet.py  tweeter.py
gcp_util/: blob_storage.py  secrets.py  test.json
infrastructure/: deploy.yml  pull_requests.yml
jimsWebsite/: db.sqlite3  manage.py
old_stuff/: advent_of_code.html
scripts/: create_new_datafile.py  create_telegram_webhook.py  mock_message.py
src/: consts.ts  index.html  styles.css
telegram_bot/: bot.py
tests/: test_routes.py
twitter/: credentials.py  dataguybot.py  positive_adjectives.txt  tweet_tracker.py  util.py
(+166 files in other folders)
